tests/vendor/valid/simple/assign_ternary.c
//expect 2
//tags: simple, conditional
int main() {
    int a = 0;
    a = 1 ? 2 : 3;
    return a;
}