tests/vendor/invalid/syntax/increment_declaration.c
//tags: simple, increment
int main() {
    int a++;
    return 0;
}